Re-write CharacterColor::operator==(), CharacterColor::operator!=(). Previous implementation caused memory alignment trap on ARM.

BUG:160137

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=792018